monthly-audit_and_change_to_df

--- a/examples/Contextual-Compression-with-RAG/main.ipynb
+++ b/examples/Contextual-Compression-with-RAG/main.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5254bc18-fa57-4865-b2d6-db1cb4f411bf",
+   "metadata": {},
+   "source": [
+    "# Contextual Compression and Filtering in RAG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c72fdaec-8061-47ac-9b48-dcb3ae1cdd4c",
+   "metadata": {},
+   "source": [
+    "### Installing dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "e8b87ed8-7b08-484a-a7a3-6ea54b0dce99",
@@ -9,6 +25,14 @@
    "source": [
     "%%capture\n",
     "!pip install -qU langchain huggingface_hub lancedb pypdf python-dotenv transformers sentence-transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f931aad1-b0b7-4873-892e-586fff5b27ab",
+   "metadata": {},
+   "source": [
+    "### Importing libraries"
    ]
   },
   {
@@ -26,7 +50,15 @@
     "from langchain.prompts import PromptTemplate\n",
     "from dotenv import load_dotenv\n",
     "from langchain.llms import OpenAI\n",
-    "import lancedb"
+    "import lancedb\n",
+    "from langchain.retrievers import ContextualCompressionRetriever\n",
+    "from langchain.retrievers.document_compressors import LLMChainExtractor\n",
+    "from getpass import getpass\n",
+    "import os\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "from langchain.retrievers.document_compressors import EmbeddingsFilter\n",
+    "from langchain.document_transformers import EmbeddingsRedundantFilter\n",
+    "from langchain.retrievers.document_compressors import DocumentCompressorPipeline"
    ]
   },
   {
@@ -47,6 +79,14 @@
     "import os\n",
     "from getpass import getpass\n",
     "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = getpass(\"Enter HuggingFace Hub Token:\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "807b9dbb-70c9-4dd0-b578-937c5dc497f7",
+   "metadata": {},
+   "source": [
+    "### Load the data"
    ]
   },
   {
@@ -106,6 +146,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a13a069-8194-405b-b797-58aaec0ee3d6",
+   "metadata": {},
+   "source": [
+    "### Split texts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "id": "a0935ff9-ec5e-4af3-8194-694d6e09f14b",
@@ -128,6 +176,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34ffcd9c-ce11-4e48-b382-ba3856e112fb",
+   "metadata": {},
+   "source": [
+    "### Embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "id": "f8934f57-45d0-4e50-89ad-0cb2fc0d5b25",
@@ -143,6 +199,14 @@
    ],
    "source": [
     "embeddings = SentenceTransformerEmbeddings(model_name=\"llmware/industry-bert-insurance-v0.1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b07db212-a314-4f00-a6b1-37fb1c6457cd",
+   "metadata": {},
+   "source": [
+    "### Load the LLM"
    ]
   },
   {
@@ -178,6 +242,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d5f17af2-5b32-4e22-971b-eaf7e09a04a0",
+   "metadata": {},
+   "source": [
+    "### Instantiate VectorStore (LanceDB)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "id": "09ce605a-93ab-4734-8784-3b57dd330722",
@@ -189,6 +261,14 @@
     "table = context_data.create_table(\"context\", data=[\n",
     "    {\"vector\": embeddings.embed_query(\"Hello World\"), \"text\": \"Hello World\", \"id\": \"1\"}\n",
     "], mode=\"overwrite\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0ea8f72-5f32-4c79-a76a-123cae04041e",
+   "metadata": {},
+   "source": [
+    "### Retriever"
    ]
   },
   {
@@ -269,15 +349,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e6dd9e2-26c5-4db5-b900-69455da86a55",
+   "metadata": {},
+   "source": [
+    "### Compressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 110,
    "id": "fe7799d1-5f00-4b99-8fc2-f1054cbb9c23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.retrievers import ContextualCompressionRetriever\n",
-    "from langchain.retrievers.document_compressors import LLMChainExtractor\n",
-    "\n",
     "#creating the compressor\n",
     "compressor = LLMChainExtractor.from_llm(llm=llm)\n",
     "\n",
@@ -377,11 +462,6 @@
     }
    ],
    "source": [
-    "from getpass import getpass\n",
-    "import os\n",
-    "from langchain.embeddings import OpenAIEmbeddings\n",
-    "from langchain.retrievers.document_compressors import EmbeddingsFilter\n",
-    "\n",
     "os.environ[\"OPENAI_API_KEY \"] = getpass()\n",
     "embdeddings_filter = EmbeddingsFilter(embeddings=embeddings)\n",
     "compression_retriever_filter = ContextualCompressionRetriever(base_retriever=retriever_d,\n",
@@ -389,6 +469,14 @@
     "\n",
     "compressed_docs = compression_retriever_filter.get_relevant_documents(query=\"What is the Environment?\")\n",
     "pretty_print_docs(compressed_docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fba3d435-4ab7-4792-85df-d39a1a5ea8ae",
+   "metadata": {},
+   "source": [
+    "### Retrieve answer from Compressed Data"
    ]
   },
   {
@@ -501,9 +589,6 @@
     }
    ],
    "source": [
-    "from langchain.document_transformers import EmbeddingsRedundantFilter\n",
-    "from langchain.retrievers.document_compressors import DocumentCompressorPipeline\n",
-    "\n",
     "redundant_filter = EmbeddingsRedundantFilter(embeddings=embeddings)\n",
     "relevant_filter = EmbeddingsFilter(embeddings=embeddings,k=5)\n",
     "\n",
@@ -664,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
