--- a/examples/instruct-multitask/main.ipynb
+++ b/examples/instruct-multitask/main.ipynb
@@ -122,7 +122,7 @@
    "id": "7be2cd8c-710f-4eca-b93e-2b5f5876198a",
    "metadata": {},
    "source": [
-    "### Importing neccessary functionalities"
+    "### Importing neccessary libraries"
    ]
   },
   {
@@ -446,7 +446,7 @@
    "id": "ae29780a-7bc7-4baf-94e3-561835e18b8f",
    "metadata": {},
    "source": [
-    "## Second use case - Question Answering with Pinecone"
+    "## Second use case - **Question Answering** with LanceDB"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "id": "a08ec791-bd1f-47d9-96f7-70bdbaf24769",
    "metadata": {},
    "source": [
-    "### Calling embedding model with different instruction pair"
+    "Calling embedding model with different instruction pair"
    ]
   },
   {
@@ -590,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
