--- a/examples/llm-pretraining-dataloading/train.ipynb
+++ b/examples/llm-pretraining-dataloading/train.ipynb
@@ -17,10 +17,9 @@
     "# GPT from Scratch using Lightning AI and Lance!\n",
     "\n",
     "This notebook follows the code that I wrote at my talk in Lightning AI meetup in London on 8th November.\n",
+    "I am implementing a GPT model from scratch (including all the modules like CausalAttention, MultiHeadedAttention and FFN and then binding it all together in LightningAI and training it with the help of it.\n",
     "\n",
-    "I am implementing a GPT model from scratch (including all the modules like CausalAttention, MultiHeadedAttention and FFN) and then binding it all together in LightningAI and training it with the help of it.\n",
-    "\n",
-    "## Notes on Data Tokenization and Lance\n",
+    "### Notes on Data Tokenization and Lance\n",
     "I am using [Lance](https://github.com/lancedb/lance/) to load our training data. It is a modern columnar data format for ML and LLMs implemented in Rust.\n",
     "\n",
     "The problem faced was that because of low memory and compute, we can't load the entire TinyStories dataset (about 2.3 GB in size) and tokenize it. The solution was to pre-tokenize the dataset, convert it into a PyArrow table and save it in Lance format.\n",
@@ -28,6 +27,14 @@
     "**Lance essentially allows us to only load some indices of the data at any given moment instead of loading the entire dataset and maxing out the memory**.\n",
     "\n",
     "If you want to play with Lance and checkout other use cases of it, you can see it's repository: https://github.com/lancedb/lance/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67f3feec-6f66-4581-93c1-674ba847b1ce",
+   "metadata": {},
+   "source": [
+    "### Installing dependencies"
    ]
   },
   {
@@ -56,6 +63,14 @@
     "pip install -q pyarrow\n",
     "pip install -q pylance\n",
     "pip install -q lightning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db7d12f5-c501-4085-93db-6901b3805a3a",
+   "metadata": {},
+   "source": [
+    "### Importing libraries"
    ]
   },
   {
@@ -429,7 +444,7 @@
     "tags": []
    },
    "source": [
-    "## Attention - `CausalAttentionHead` and `MultiHeadedAttention`"
+    "## Attention - `CausalAttentionHead`"
    ]
   },
   {
@@ -484,6 +499,14 @@
     "        # attn_weights [bs, c, c] x V [bs, c, h] = output [bs, c, head_size]\n",
     "        output = torch.bmm(attn_weights, v)\n",
     "        return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd6bd25c-9219-44c0-a383-cf46e8fd16f7",
+   "metadata": {},
+   "source": [
+    "### `MultiHeadedAttention`"
    ]
   },
   {
@@ -775,8 +798,8 @@
     "tags": []
    },
    "source": [
-    "## GPTDataset for efficient and fast data loading\n",
-    "Thanks to Lance!"
+    "## GPTDataset \n",
+    "for efficient and fast data loading thanks to **Lance**!"
    ]
   },
   {
@@ -1011,7 +1034,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1025,7 +1048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   },
   "papermill": {
    "default_parameters": {},
@@ -1265,11 +1288,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1fbbceb74ef541e0ba4c6ed94a6b56ce",
-       "max": 1.0,
-       "min": 0.0,
+       "max": 1,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_58dfc0a9b4d8411abf0daae4673d2690",
-       "value": 1.0
+       "value": 1
       }
      },
      "11d146cd693d43bba6daf52800e3f3a8": {
@@ -1527,11 +1550,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1dacacdc1ac74a0b8dc709010d622bd1",
-       "max": 654.0,
-       "min": 0.0,
+       "max": 654,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e3397d6b220c435195989008fe406545",
-       "value": 654.0
+       "value": 654
       }
      },
      "1fbbceb74ef541e0ba4c6ed94a6b56ce": {
@@ -1961,11 +1984,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_6d98885a2b35453ca56b649d620321d0",
-       "max": 2227753162.0,
-       "min": 0.0,
+       "max": 2227753162,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_37b49c92f77f4794b3c2c6d1c3b877a0",
-       "value": 2227753162.0
+       "value": 2227753162
       }
      },
      "3ee1f7c4cea047389aa827daa1ea82bd": {
@@ -2339,11 +2362,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_9221e7b49e734748addd39eaa6edb076",
-       "max": 665.0,
-       "min": 0.0,
+       "max": 665,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_86a2ebf4c97c48bc9ae1b08a531ca223",
-       "value": 665.0
+       "value": 665
       }
      },
      "64adc378fb41404297cfac72bb5ac04b": {
@@ -2911,11 +2934,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_67b0f83c9f7a4596a500ce870db36868",
-       "max": 1042301.0,
-       "min": 0.0,
+       "max": 1042301,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_64adc378fb41404297cfac72bb5ac04b",
-       "value": 1042301.0
+       "value": 1042301
       }
      },
      "83b2d167306b44b6bd9e9c729c7f6843": {
@@ -3373,11 +3396,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_73e64983d6d743e6820eed09bc41933e",
-       "max": 1000.0,
-       "min": 0.0,
+       "max": 1000,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_cbfc56a837314f7abe690c13acc1d911",
-       "value": 1000.0
+       "value": 1000
       }
      },
      "a525396e2e4c4202a75e7071df3a18e1": {
@@ -3506,11 +3529,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_7c4396ce7a384e6bb53298c8474bad54",
-       "max": 1.0,
-       "min": 0.0,
+       "max": 1,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_79af3448c5a4459888046b8f8ce59c36",
-       "value": 1.0
+       "value": 1
       }
      },
      "b2f6efa486a54deeb44aa344d19edbc0": {
@@ -3645,11 +3668,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_22c11eea4f0143abbdae9cbdd60df960",
-       "max": 456318.0,
-       "min": 0.0,
+       "max": 456318,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f6c55bf958e2431da9dcc6bb38e1aa2a",
-       "value": 456318.0
+       "value": 456318
       }
      },
      "c77c3e08bbd24118b98810dadcf7ca7d": {
@@ -3684,11 +3707,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_0a6ccae4a94e44d99f53739413f9c879",
-       "max": 1.0,
-       "min": 0.0,
+       "max": 1,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_dcadd182bf1b46eda5166824df820167",
-       "value": 1.0
+       "value": 1
       }
      },
      "ca64ee47d912459a8e722257f0509565": {
@@ -4396,11 +4419,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1413793dbb2f4078b421c21e7cc44deb",
-       "max": 1355256.0,
-       "min": 0.0,
+       "max": 1355256,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_8593ffe4938040199c948f5e122146f7",
-       "value": 1355256.0
+       "value": 1355256
       }
      },
      "f6c55bf958e2431da9dcc6bb38e1aa2a": {
