--- a/examples/movie-recommender/main.ipynb
+++ b/examples/movie-recommender/main.ipynb
@@ -1433,7 +1433,7 @@
    "source": [
     "def get_recommendations(title):\n",
     "    pd_data = pd.DataFrame(data)\n",
-    "    result = table.search(pd_data[pd_data['title'] == title][\"vector\"].values[0]).limit(5).to_df()\n",
+    "    result = table.search(pd_data[pd_data['title'] == title][\"vector\"].values[0]).limit(5).to_pandas()\n",
     "\n",
     "    links = pd.read_csv('./ml-latest-small/links.csv', header=0, names=[\"movie id\", \"imdb id\", \"tmdb id\"], converters={'imdb id': str})\n",
     "\n",
@@ -1549,7 +1549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
