--- a/examples/multimodal_clip/main.ipynb
+++ b/examples/multimodal_clip/main.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "06c53ccb-5654-4150-93a2-cdf9ff4d8d26",
+   "metadata": {},
+   "source": [
+    "### Installing all dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "69fb1627",
@@ -369,7 +377,7 @@
     "        f\"embedding = embed_func('{query}')\\n\"\n",
     "        \"tbl.search(embedding).limit(9).to_df()\"\n",
     "    )\n",
-    "    return (_extract(tbl.search(emb).limit(9).to_df()), code)\n",
+    "    return (_extract(tbl.search(emb).limit(9).to_pandas()), code)\n",
     "\n",
     "def find_image_keywords(query):\n",
     "    code = (\n",
@@ -378,7 +386,7 @@
     "        \"tbl = db.open_table('diffusiondb')\\n\\n\"\n",
     "        f\"tbl.search('{query}').limit(9).to_df()\"\n",
     "    )\n",
-    "    return (_extract(tbl.search(query).limit(9).to_df()), code)\n",
+    "    return (_extract(tbl.search(query).limit(9).to_pandas()), code)\n",
     "\n",
     "def find_image_sql(query):\n",
     "    code = (\n",
@@ -390,7 +398,7 @@
     "        f\"duckdb.sql('{query}').to_df()\"\n",
     "    )    \n",
     "    diffusiondb = tbl.to_lance()\n",
-    "    return (_extract(duckdb.sql(query).to_df()), code)\n",
+    "    return (_extract(duckdb.sql(query).to_pandas()), code)\n",
     "\n",
     "def _extract(df):\n",
     "    image_col = \"image\"\n",
@@ -503,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   },
   "vscode": {
    "interpreter": {
