--- a/examples/multimodal_video_search/main.ipynb
+++ b/examples/multimodal_video_search/main.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e647a892-de71-4842-a26d-035d628792d3",
+   "metadata": {},
+   "source": [
+    "### Install dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "69fb1627",
@@ -27,7 +35,7 @@
    "id": "2d53ade3",
    "metadata": {},
    "source": [
-    "## First run setup: Download data and pre-process\n"
+    "## First run setup: Download data and pre-process"
    ]
   },
   {
@@ -126,9 +134,9 @@
     "        \"db = lancedb.connect('data/video-lancedb')\\n\"\n",
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
     "        f\"embedding = embed_func('{query}')\\n\"\n",
-    "        \"tbl.search(embedding).limit(9).to_df()\"\n",
+    "        \"tbl.search(embedding).limit(9).to_pandas()\"\n",
     "    )\n",
-    "    return (_extract(tbl.search(emb).limit(9).to_df()), code)\n",
+    "    return (_extract(tbl.search(emb).limit(9).to_pandas()), code)\n",
     "\n",
     "#function to find the search for the video keywords from lancedb\n",
     "def find_video_keywords(query):\n",
@@ -136,9 +144,9 @@
     "        \"import lancedb\\n\"\n",
     "        \"db = lancedb.connect('data/video-lancedb')\\n\"\n",
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
-    "        f\"tbl.search('{query}').limit(9).to_df()\"\n",
+    "        f\"tbl.search('{query}').limit(9).to_pandas()\"\n",
     "    )\n",
-    "    return (_extract(tbl.search(query).limit(9).to_df()), code)\n",
+    "    return (_extract(tbl.search(query).limit(9).to_pandas()), code)\n",
     "\n",
     "#create a SQL command to retrieve the video from the db\n",
     "def find_video_sql(query):\n",
@@ -148,10 +156,10 @@
     "        \"db = lancedb.connect('data/video-lancedb')\\n\"\n",
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
     "        \"videos = tbl.to_lance()\\n\"\n",
-    "        f\"duckdb.sql('{query}').to_df()\"\n",
+    "        f\"duckdb.sql('{query}').to_pandas()\"\n",
     "    )\n",
     "    videos = tbl.to_lance()\n",
-    "    return (_extract(duckdb.sql(query).to_df()), code)\n",
+    "    return (_extract(duckdb.sql(query).to_pandas()), code)\n",
     "\n",
     "#extract the video from the df\n",
     "def _extract(df):\n",
@@ -181,18 +189,18 @@
     "        \"db = lancedb.connect('data/video-lancedb')\\n\"\n",
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
     "        f\"embedding = embed_func('{query}')\\n\"\n",
-    "        \"tbl.search(embedding).limit(9).to_df()\"\n",
+    "        \"tbl.search(embedding).limit(9).to_pandas()\"\n",
     "    )\n",
-    "    return (_extract(tbl.search(emb).limit(9).to_df()), code)\n",
+    "    return (_extract(tbl.search(emb).limit(9).to_pandas()), code)\n",
     "\n",
     "def find_video_keywords(query):\n",
     "    code = (\n",
     "        \"import lancedb\\n\"\n",
     "        \"db = lancedb.connect('data/video-lancedb')\\n\"\n",
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
-    "        f\"tbl.search('{query}').limit(9).to_df()\"\n",
+    "        f\"tbl.search('{query}').limit(9).to_pandas()\"\n",
     "    )\n",
-    "    return (_extract(tbl.search(query).limit(9).to_df()), code)\n",
+    "    return (_extract(tbl.search(query).limit(9).to_pandas()), code)\n",
     "\n",
     "def find_video_sql(query):\n",
     "    code = (\n",
@@ -201,10 +209,10 @@
     "        \"db = lancedb.connect('data/video-lancedb')\\n\"\n",
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
     "        \"videos = tbl.to_lance()\\n\"\n",
-    "        f\"duckdb.sql('{query}').to_df()\"\n",
+    "        f\"duckdb.sql('{query}').to_pandas()\"\n",
     "    )    \n",
     "    videos = tbl.to_lance()\n",
-    "    return (_extract(duckdb.sql(query).to_df()), code)\n",
+    "    return (_extract(duckdb.sql(query).to_pandas()), code)\n",
     "\n",
     "def _extract(df):\n",
     "    video_id_col = \"video_id\"\n",
@@ -282,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.1"
   },
   "vscode": {
    "interpreter": {
