--- a/examples/product-recommender/main.ipynb
+++ b/examples/product-recommender/main.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install dependencies:"
+    "### Install dependencies"
    ]
   },
   {
@@ -68,7 +68,7 @@
     "id": "i_eatRhaIGIz"
    },
    "source": [
-    "First, let's import all the required modules for this example."
+    "### Importing libraries"
    ]
   },
   {
@@ -101,6 +101,7 @@
     "id": "bUGkN85V4_zY"
    },
    "source": [
+    "### Load the dataset\n",
     "Now we can download the dataset. You will need to accept the rules of the `instacart-market-basket-analysis` competition, which you can do so [here](https://www.kaggle.com/competitions/instacart-market-basket-analysis/rules)."
    ]
   },
@@ -178,6 +179,13 @@
    },
    "source": [
     "Since there isn't a user rating attribute, we'll gather \"confidence\" data by looking at the frequency of each item purchased by a user, and store this in the `data` dataframe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Manipulation"
    ]
   },
   {
@@ -451,7 +459,7 @@
     "id": "xBC-8PFTt5HD"
    },
    "source": [
-    "In the next step, we will extract user and product unique ids, in order to create a CSR (Compressed Sparse Row) matrix. This will allow us to perform collaborative filtering.\n"
+    "In the next step, we will extract user and product unique ids, in order to create a `CSR (Compressed Sparse Row)` matrix. This will allow us to perform collaborative filtering.\n"
    ]
   },
   {
@@ -1859,7 +1867,7 @@
     "# Query by user factors\n",
     "test_user_embeddings = test_user_factors.to_numpy().tolist() if device == \"cuda\" else test_user_factors.tolist()\n",
     "for embedding, id in zip(test_user_embeddings, test_user_ids):\n",
-    "    results = tbl.search(embedding).limit(10).to_df()\n",
+    "    results = tbl.search(embedding).limit(10).to_pandas()\n",
     "    display(results)\n",
     "    display(products_bought_by_user_in_the_past(id, top=15))"
    ]
@@ -1886,7 +1894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   },
   "vscode": {
    "interpreter": {
