--- a/examples/prompttools-eval-prompts/main.ipynb
+++ b/examples/prompttools-eval-prompts/main.ipynb
@@ -84,6 +84,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "189752e1-f392-42a3-b21c-56e8b384d9fc",
+   "metadata": {},
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "9114cfbf",
@@ -756,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
