--- a/examples/reducing_hallucinations_ai_agents/main.ipynb
+++ b/examples/reducing_hallucinations_ai_agents/main.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Installing dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -22,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, let's import required libraries for our LangChain agent."
+    "### Importing libraries"
    ]
   },
   {
@@ -120,6 +127,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to take input"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 225,
    "metadata": {},
@@ -154,6 +168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve Input"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 226,
    "metadata": {},
@@ -168,7 +189,7 @@
     "    table_name = \"exercise-routine\"\n",
     "    if table_name in db.table_names():\n",
     "        tbl = db.open_table(table_name)\n",
-    "        results = tbl.search(embed_func(query)[0]).limit(5).select([\"actions\", \"critique\"]).to_df()\n",
+    "        results = tbl.search(embed_func(query)[0]).limit(5).select([\"actions\", \"critique\"]).to_pandas()\n",
     "        results_list = results.drop(\"vector\", axis=1).values.tolist()\n",
     "        return \"Continue with the list with relevant actions and critiques which are in the format [[action, critique], ...]:\\n\" + str(results_list)\n",
     "    else:\n",
@@ -202,6 +223,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Prompt Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 231,
    "metadata": {},
@@ -224,6 +252,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Run Agent\n",
+    "\n",
     "Finally, let's create our run_agent function. We'll use the `STRUCTURED_CHAT_ZERO_SHOT_REACT_DESCRIPTION` agent in order to allow us to use multi-input tools (since we need to add client input, actions, and critiques as arguments)."
    ]
   },
@@ -340,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
