--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1991331f-4316-417a-b693-e2f27cbe9ea7",
+   "metadata": {},
+   "source": [
+    "### Installing dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "66638d6c",
@@ -57,9 +65,16 @@
    "id": "34f524d3",
    "metadata": {},
    "source": [
-    "# Loading in our code documentation, generating embeddings and storing our documents in LanceDB\r\n",
     "\r\n",
     "We're going to use the power of LangChain to help us create our Q&A bot. It comes with several APIs that can make our development much easier as well as a LanceDB integration for vectorstore."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e11ed32-b742-4012-a37d-af54ea2a2715",
+   "metadata": {},
+   "source": [
+    "### Importing all libraries"
    ]
   },
   {
@@ -93,6 +108,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f5c79b5-7a43-403d-b456-9276cfe175b5",
+   "metadata": {},
+   "source": [
+    "### Get the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "7da77e75",
@@ -114,7 +137,7 @@
    "id": "ae42496c",
    "metadata": {},
    "source": [
-    "We'll create a simple helper function that can help to extract metadata, so we can use this downstream when we're wanting to query with filters. In this case, we want to keep the lineage of the uri or path for each document that we process:"
+    "We'll create a simple **helper function** that can help to extract metadata, so we can use this downstream when we're wanting to query with filters. In this case, we want to keep the lineage of the uri or path for each document that we process:"
    ]
   },
   {
@@ -254,7 +277,7 @@
    "id": "43e68215",
    "metadata": {},
    "source": [
-    "# Storing and querying with LanceDB\n",
+    "# Storing\n",
     "\n",
     "Let's connect to LanceDB so we can store our documents. We'll create a Table to store them in:"
    ]
@@ -297,6 +320,14 @@
    "metadata": {},
    "source": [
     "And thats it! We're all setup. The next step is to run some queries, let's try a few:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82a5c946-5af3-45c1-862a-207ff4a34bb4",
+   "metadata": {},
+   "source": [
+    "### Querying"
    ]
   },
   {
@@ -390,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.1"
   },
   "vscode": {
    "interpreter": {
