--- a/examples/arxiv-recommender/main.ipynb
+++ b/examples/arxiv-recommender/main.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "    embs = embed_func(query)\n",
     "    \n",
-    "    return tbl.search(embs.tolist()[0]).limit(3).to_df()\n"
+    "    return tbl.search(embs.tolist()[0]).limit(3).to_pandas()\n"
    ]
   },
   {
@@ -627,7 +627,7 @@
    ],
    "source": [
     "## FTS via title\n",
-    "result = tbl.search(\"What is the general idea behind self-supervised learning.\").limit(10).to_df()\n",
+    "result = tbl.search(\"What is the general idea behind self-supervised learning.\").limit(10).to_pandas()\n",
     "\n",
     "result.pop(\"vector\")\n",
     "\n",
@@ -765,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   },
   "vscode": {
    "interpreter": {
