--- a/examples/multi-lingual-wiki-qa/main.ipynb
+++ b/examples/multi-lingual-wiki-qa/main.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Installing dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -30,7 +37,7 @@
     }
    ],
    "source": [
-    "!pip install -qU datasets cohere openai lancedb\n"
+    "!pip install -qU datasets cohere openai lancedb"
    ]
   },
   {
@@ -575,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -589,9 +596,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
