--- a/examples/youtube_bot/main.ipynb
+++ b/examples/youtube_bot/main.ipynb
@@ -8,8 +8,15 @@
     "# Youtube Transcript Search QA Bot\n",
     "![picture](https://qph.cf2.quoracdn.net/main-qimg-5a926a036070e4e2ea33283dbe26c17c-pjlq) \n",
     "\n",
-    "This Q&A bot will allow you to search through youtube transcripts using natural language! By going through this notebook, we'll introduce how you can use LanceDB to store and manage your data easily.\n",
-    "\n"
+    "This Q&A bot will allow you to search through youtube transcripts using natural language! By going through this notebook, we'll introduce how you can use LanceDB to store and manage your data easily.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b29e1754-a01e-41e4-804a-a6f5dac8f033",
+   "metadata": {},
+   "source": [
+    "### Install dependencies"
    ]
   },
   {
@@ -161,7 +168,7 @@
     "df = (contextualize(data.to_pandas())\n",
     "      .groupby(\"title\").text_col(\"text\")\n",
     "      .window(20).stride(4)\n",
-    "      .to_df())\n",
+    "      .to_pandas())\n",
     "df.head(1)"
    ]
   },
@@ -569,7 +576,7 @@
    "id": "f628fb47",
    "metadata": {},
    "source": [
-    "Again we'll use LanceDB's chaining query API. This time, we'll perform similarity search to find similar embeddings to our query. We can easily tweak the parameters in the query to produce the best result.\n",
+    "Again we'll use `LanceDB's chaining query API`. This time, we'll perform similarity search to find similar embeddings to our query. We can easily tweak the parameters in the query to produce the best result.\n",
     "\n"
    ]
   },
@@ -581,7 +588,7 @@
    "outputs": [],
    "source": [
     "# Use LanceDB to get top 3 most relevant context\n",
-    "context = tbl.search(emb).limit(3).to_df()"
+    "context = tbl.search(emb).limit(3).to_pandas()"
    ]
   },
   {
@@ -669,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
